Archive2/b8/d575c4a4cec92a/output
main.cpp:192:52: error: unknown type name 's'
    for (auto& e : extracted.files   | map_values) s
                                                   ^
main.cpp:193:9: error: use of undeclared identifier 'td'
        td::cout << "file:\t"   << e.id << "\t" << e.path << "\t" << e.name << "\n";
        ^
2 errors generated.
